@@ -70,6 +70,8 @@ dependencies {
 
     compile name: 'jackrabbit-api', version: '2.5.2' // Apache 2.0
     compile name: 'jackrabbit-jcr-commons', version: '2.5.2' // Apache 2.0
+    compile name: 'jackrabbit-jcr2dav', version: '2.5.2' // Apache 2.0
+    compile name: 'jackrabbit-jcr-rmi', version: '2.5.2' // Apache 2.0
     compile name: 'jcr', version: '2.0' // Apache 2.0???
 
     compile name: 'jsonrpc2-base', version: '1.20' // Apache 2.0
@@ -118,6 +120,15 @@ dependencies {
     runtime name: 'camel-mail', version: '2.9.2' // Apache 2.0
     runtime name: 'camel-quartz', version: '2.9.2' // Apache 2.0
     runtime name: 'camel-shiro', version: '2.9.2' // Apache 2.0
+
+    /* For extended WebDAV connection to Jackrabbit these are needed:
+    runtime name: 'jackrabbit-spi', version: '2.5.2' // Apache 2.0
+    runtime name: 'jackrabbit-spi-commons', version: '2.5.2' // Apache 2.0
+    runtime name: 'jackrabbit-jcr2spi', version: '2.5.2' // Apache 2.0
+    runtime name: 'jackrabbit-spi2dav', version: '2.5.2' // Apache 2.0
+    runtime name: 'jackrabbit-webdav', version: '2.5.2' // Apache 2.0
+    runtime name: 'commons-httpclient', version: '3.1' // Apache 2.0
+    */
 
     runtime name: 'derby', version: '10.8.2.2' // Apache 2.0
     runtime name: 'jakarta-oro', version: '2.0.8' // Apache 2.0
