@@ -414,8 +414,9 @@
     </database-list>
     <repository-list>
         <!-- No JCR repo by default, but here are some examples: -->
+        <!-- <repository name="main" location="http://localhost:8081/rmi" type="rmi" workspace="default"
+                    username="admin" password="admin"/> -->
         <!-- <repository name="main" location="http://localhost:8081/server" type="davex" workspace="default"/> -->
-        <!-- <repository name="main" location="http://localhost:8081/rmi" type="rmi" workspace="default"/> -->
         <!-- <repository name="main" location="java:comp/env/jcr/repository" type="jndi" workspace="default"/> -->
     </repository-list>
     <component-list>
