@@ -25,6 +25,7 @@
     <entity-facade crypt-pass="MoquiProductionDefaultPassword:CHANGEME"/>
 
     <repository-list>
-        <repository name="main" location="http://localhost:8081/server" type="davex" workspace="production"/>
+        <repository name="main" location="http://localhost:8081/rmi" type="rmi" workspace="default"
+                    username="admin" password="admin"/>
     </repository-list>
 </moqui-conf>
