@@ -22,6 +22,7 @@
     <entity-facade crypt-pass="MoquiStagingDefaultPassword:CHANGEME"/>
 
     <repository-list>
-        <repository name="main" location="http://localhost:8081/server" type="davex" workspace="staging"/>
+        <repository name="main" location="http://localhost:8081/rmi" type="rmi" workspace="staging"
+                    username="admin" password="admin"/>
     </repository-list>
 </moqui-conf>
